@@ -1,5 +1,5 @@
 /*
- * Copyright 2018 - 2022 Anton Tananaev (anton@traccar.org)
+ * Copyright 2018 - 2023 Anton Tananaev (anton@traccar.org)
  * Copyright 2018 Andrey Kunitsyn (andrey@traccar.org)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -21,11 +21,11 @@ import org.traccar.config.Keys;
 import org.traccar.helper.DataConverter;
 import org.traccar.notification.MessageException;
 
-import javax.ws.rs.client.Client;
-import javax.ws.rs.client.Entity;
-import javax.ws.rs.client.Invocation;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
+import jakarta.ws.rs.client.Client;
+import jakarta.ws.rs.client.Entity;
+import jakarta.ws.rs.client.Invocation;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -57,7 +57,10 @@ public class HttpSmsClient implements SmsManager {
             }
         }
         template = config.getString(Keys.SMS_HTTP_TEMPLATE).trim();
-        if (template.charAt(0) == '{' || template.charAt(0) == '[') {
+        if (template.charAt(0) == '<') {
+            encode = false;
+            mediaType = MediaType.APPLICATION_XML_TYPE;
+        } else if (template.charAt(0) == '{' || template.charAt(0) == '[') {
             encode = false;
             mediaType = MediaType.APPLICATION_JSON_TYPE;
         } else {
@@ -67,7 +70,7 @@ public class HttpSmsClient implements SmsManager {
     }
 
     private String prepareValue(String value) throws UnsupportedEncodingException {
-        return encode ? URLEncoder.encode(value, StandardCharsets.UTF_8.name()) : value;
+        return encode ? URLEncoder.encode(value, StandardCharsets.UTF_8) : value;
     }
 
     private String preparePayload(String destAddress, String message) {
